java8 기반으로 코드 변경